<resources>
    <string name="app_name">AndroidDataStorage</string>
    <string name="new_prod_dbase">New Products Database</string>
    <string name="insert_item">Insert New Item</string>
    <string name="search_item">Search Item</string>
    <string name="add_product">Add New Product Item</string>
    <string name="item_name">Item Name:</string>
    <string name="item_desc">Item Description:</string>
    <string name="item_price">Item Price:</string>
    <string name="item_review">Item Review:</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
</resources>
