<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/dark_black"
    tools:context="rajee.sairam.androiddatastorage.InsertItem">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_product"
        android:textSize="@dimen/font_large"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginBottom="70dp"/>

   <TableLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:layout_margin="10dp">
       <TableRow android:layout_marginBottom="8dp">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/item_name"
               android:textColor="@color/white"
               android:textSize="@dimen/font_medium"
               android:textStyle="bold"
               android:gravity="right"
               android:layout_marginRight="8dp"/>
           <EditText
               android:id="@+id/name"
               android:layout_width="match_parent"
               android:layout_height="50dp"
               android:background="@color/white"
               android:textColor="@color/dark_black"
               android:textSize="@dimen/font_medium"
               android:padding="8dp"
               android:hint="Samsung Galaxy S7"/>
       </TableRow>
       <TableRow android:layout_marginBottom="8dp">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/item_desc"
               android:textColor="@color/white"
               android:textSize="@dimen/font_medium"
               android:textStyle="bold"
               android:gravity="right"
               android:layout_marginRight="8dp"/>
           <EditText
               android:id="@+id/desc"
               android:layout_width="match_parent"
               android:layout_height="50dp"
               android:background="@color/white"
               android:textColor="@color/dark_black"
               android:textSize="@dimen/font_medium"
               android:padding="8dp"
               android:hint="Smartphone"/>
       </TableRow>
       <TableRow android:layout_marginBottom="8dp">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/item_price"
               android:textColor="@color/white"
               android:textSize="@dimen/font_medium"
               android:textStyle="bold"
               android:gravity="right"
               android:layout_marginRight="8dp"/>
           <EditText
               android:id="@+id/price"
               android:layout_width="match_parent"
               android:layout_height="50dp"
               android:background="@color/white"
               android:textColor="@color/dark_black"
               android:textSize="@dimen/font_medium"
               android:padding="8dp"
               android:hint="$599.99"/>
       </TableRow>
       <TableRow android:layout_marginBottom="8dp">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/item_review"
               android:textColor="@color/white"
               android:textSize="@dimen/font_medium"
               android:textStyle="bold"
               android:gravity="right"
               android:layout_marginRight="8dp"/>
           <EditText
               android:id="@+id/review"
               android:layout_width="match_parent"
               android:layout_height="50dp"
               android:background="@color/white"
               android:textColor="@color/dark_black"
               android:textSize="@dimen/font_medium"
               android:padding="8dp"
               android:hint="Excellent Phone"/>
       </TableRow>
   </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="40dp">
        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/purple_button"
            android:padding="8dp"
            android:text="@string/add"
            android:textSize="@dimen/font_large"
            android:textColor="@color/white"
            android:layout_marginRight="20dp"/>
        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/purple_button"
            android:padding="8dp"
            android:text="@string/cancel"
            android:textSize="@dimen/font_large"
            android:textColor="@color/white"/>
    </LinearLayout>
</LinearLayout>
