<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/dark_cyan"
    tools:context="rajee.sairam.androiddatastorage.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/new_prod_dbase"
        android:textSize="@dimen/font_large"
        android:textColor="@color/dark_black"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginBottom="70dp"/>

    <Button
        android:id="@+id/insert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/insert_item"
        android:textSize="@dimen/font_large"
        android:textColor="@color/white"
        android:background="@drawable/red_button"
        android:layout_gravity="center"
        android:padding="20dp"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="50dp"/>

    <Button
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_item"
        android:textSize="@dimen/font_large"
        android:textColor="@color/white"
        android:background="@drawable/purple_button"
        android:layout_gravity="center"
        android:padding="20dp"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

</LinearLayout>
