<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/dark_black"
    tools:context="rajee.sairam.androiddatastorage.SearchItem">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_item"
        android:textSize="@dimen/font_large"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginBottom="40dp"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:textColor="@color/dark_black"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:padding="8dp"
        tools:text="Samsung"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/purple_button"
            android:padding="8dp"
            android:text="@string/search"
            android:textSize="@dimen/font_large"
            android:textColor="@color/white"
            android:layout_marginRight="20dp"/>
        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/purple_button"
            android:padding="8dp"
            android:text="@string/cancel"
            android:textSize="@dimen/font_large"
            android:textColor="@color/white"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/white"
        android:layout_marginTop="25dp"/>
    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_gray"
        android:layout_margin="10dp">

    </ListView>
</LinearLayout>
